src/objects/Account_Correlation__c.object
<CustomObject>
    <description>Global: Object used to store many IDs for a single account. Can be used to store integration IDs or legacy IDs</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Correlation</relationshipLabel>
        <relationshipName>Legacy_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_Name__c</fullName>
        <description>Used where the Source system holds more than one ID for each account</description>
        <label>External ID Name</label>
        <picklist>
            <controllingField>External_System__c</controllingField>
            <picklistValues>
                <fullName>Current Ocean Learner Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ocean Learner Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eVision Learner Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing Account Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Address Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Socrates ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sampling Account Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>The ID for the contact in an external system</description>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <description>The Name of the source External System</description>
        <label>External System</label>
        <picklist>
            <controllingField>Market__c</controllingField>
            <picklistValues>
                <fullName>Ocean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eVison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Socrates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UOPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <description>Field used to store the actual ID that needs to be recorded for the Account</description>
        <label>Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>The Market that supplied the ID</description>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>ZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Correlation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DM_Identifier__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DM_Identifier__c</field>
            <operation>equals</operation>
            <value>1000</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Correlation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>All_Fields_Required</fullName>
        <active>true</active>
        <description>To create a record, you must populate all fields.</description>
        <errorConditionFormula>(OR(  ISBLANK(Account__c), ISBLANK(External_ID__c))&amp;&amp; NOT( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c ))</errorConditionFormula>
        <errorMessage>To create a record, you must populate all fields</errorMessage>
    </validationRules>
</CustomObject>